--- a/gerenciamento-pets-frontend-eduardo/package.json
+++ b/gerenciamento-pets-frontend-eduardo/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.1",
+    "vuetify-toast-snackbar": "^0.6.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
