--- a/ProjetoPET-Front-e-Back/Pet-Frontend/gerenciamento-pets-frontend-eduardo/package.json
+++ b/ProjetoPET-Front-e-Back/Pet-Frontend/gerenciamento-pets-frontend-eduardo/package.json
@@ -12,10 +12,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "file-saver": "^2.0.5",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vuetify": "^3.5.1",
+    "vuetify": "^3.4.17",
     "vuetify-toast-snackbar": "^0.6.1",
     "yup": "^1.3.3"
   },
