--- a/ProjetoPET-Front-e-Back/Pet-Backend/api_pets__backend_eduardo/.env.testing
+++ b/ProjetoPET-Front-e-Back/Pet-Backend/api_pets__backend_eduardo/.env.testing
@@ -16,5 +16,9 @@ SESSION_DRIVER=array
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-DEFAULT_EMAIL=henrique.douglas.costaa@gmail.com
+DEFAULT_EMAIL=adm@teste.com
+#DEFAULT_EMAIL=henrique.douglas.costaa@gmail.com
 DEFAULT_PASSWORD="12345678"
+
+#Depois de criar o arquivo test.sqlite na pasta database, agora vai rodar o comando
+# php artisan migrate --seed --env=testing
