--- a/ProjetoPET-Front-e-Back/Pet-Backend/api_pets__backend_eduardo/.env.testing
+++ b/ProjetoPET-Front-e-Back/Pet-Backend/api_pets__backend_eduardo/.env.testing
@@ -20,5 +20,8 @@ DEFAULT_EMAIL=adm@teste.com
 #DEFAULT_EMAIL=henrique.douglas.costaa@gmail.com
 DEFAULT_PASSWORD="12345678"
 
+#PARA EXECUTAR OS TESTE TEM QUE IR NO phpunit.xml e descomentar as duas linhas
+#tem que ter a pasta vendor instalada
+#tem que ter a pasta .env.testing na raiz e depois executar o comando abaixo
 #Depois de criar o arquivo test.sqlite na pasta database, agora vai rodar o comando
 # php artisan migrate --seed --env=testing
